Qute: param declaration - skip validation for `null` default value
- fixes #49922